--- a/5_HU_Tipperlist_Frontend/src/app/app.component.html
+++ b/5_HU_Tipperlist_Frontend/src/app/app.component.html
@@ -11,9 +11,12 @@
     </div>
   </nav>
 
-  <input type="number" #xinput  [ngModel]="dataService.x()" (change)="dataService.x.set(+xinput.value)">
-+
-  <input type="number" #yinput [ngModel]="dataService.y()" (change)="dataService.y.set(+yinput.value)">
-=
 
-{{dataService.sum()}}
+
+<div id="category-container" class="container text-center">
+  <div class="row align-items-center">
+    <div *ngFor="let category of dataService.categories()" class="col">
+      <button type="button" class="btn btn-primary">{{category}}</button>
+    </div>
+  </div>
+</div>
