--- a/5_HU_Tipperlist_Frontend/src/app/app.component.html
+++ b/5_HU_Tipperlist_Frontend/src/app/app.component.html
@@ -20,3 +20,15 @@
     </div>
   </div>
 </div>
+
+
+<div id="component-container" class="container text-center">
+  <div class="row align-items-center">
+    <div class="col">
+     <app-flag></app-flag>
+    </div>
+    <div class="col">
+      One of three columns
+    </div>
+  </div>
+</div>
