implemented flag Map

--- a/5_HU_Tipperlist_Frontend/src/app/app.component.html
+++ b/5_HU_Tipperlist_Frontend/src/app/app.component.html
@@ -25,10 +25,10 @@
 <div id="component-container" class="container text-center">
   <div class="row align-items-center">
     <div class="col">
-     <app-flag></app-flag>
+     <app-flag [countryName]="countryName"></app-flag>
     </div>
     <div class="col">
-      One of three columns
+     <!-- <app-match-result></app-match-result>-->
     </div>
   </div>
 </div>
