--- a/5_HU_Tipperlist_Frontend/src/app/shared/match-result/match-result.component.html
+++ b/5_HU_Tipperlist_Frontend/src/app/shared/match-result/match-result.component.html
@@ -6,14 +6,18 @@
         {{match.id}}
       </div>
       <div class="col">
-        <app-flag [countryName]="match.team1Name"></app-flag>:<app-flag [countryName]="match.team2Name"></app-flag>
+        <app-flag [countryName]="match.team1Name"></app-flag> 
+      </div>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:
+      <div class="col">
+       <app-flag [countryName]="match.team2Name"></app-flag>
       </div>
       <div class="col">
-       1:3 todo
+       1:3 
       </div>
       <div class="col">
-        3:2 todo
-        {{tipp.goalsShot}}:{{tipp.goalsReceived}}
+        3:2 
+     
        </div>
     </div>
   </div>
