--- a/5_HU_Tipperlist_Frontend/src/app/app.component.html
+++ b/5_HU_Tipperlist_Frontend/src/app/app.component.html
@@ -16,7 +16,7 @@
 <div id="category-container" class="container text-center">
   <div class="row align-items-center">
     <div *ngFor="let category of dataService.categories()" class="col">
-      <button type="button" class="btn btn-primary">{{category}}</button>
+      <button (click)="setSelectedCategory(category)" type="button" class="btn btn-primary">{{category}}</button>
     </div>
   </div>
 </div>
@@ -25,7 +25,7 @@
 <div id="component-container" class="container text-center">
   <div class="row align-items-center">
     <div class="col">
-     <app-flag [countryName]="countryName"></app-flag>
+     <app-tipper-names [selectedCategory]="selectedCategory()"></app-tipper-names>
     </div>
     <div class="col">
       <app-match-result [match]="dataService.allMatches().first()"></app-match-result>
