--- a/5_HU_Tipperlist_Frontend/src/app/app.component.html
+++ b/5_HU_Tipperlist_Frontend/src/app/app.component.html
@@ -28,7 +28,8 @@
      <app-tipper-names [selectedCategory]="selectedCategory()"></app-tipper-names>
     </div>
     <div class="col">
-      <app-match-result [match]="dataService.allMatches().first()"></app-match-result>
+     <!-- <app-match-result [match]="dataService.allMatches().first()"></app-match-result> -->
+     <app-tipped-matches [tipperName]="countryName"></app-tipped-matches>
     </div>
   </div>
 </div>
